Move the Item typedef to public in the associative Java iterators

The documentation talks about them. They're just iterators.

Fixes: QTBUG-75123
Change-Id: I194d3f37471a49788a7bfffd15956064b42383b7
Reviewed-by: Lars Knoll <lars.knoll@qt.io>